RSStats/.gradle/gradle.log
****************************
 Powered By MCP:             
 http://modcoderpack.com/    
 Searge, ProfMobius, Fesh0r, 
 R4wk, ZeuX, IngisKahn, bspkrs
 MCP Data version : unknown
****************************
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavawarning: [options] bootstrap class path not set in conjunction with -source 1.6
C:\Users\rares\Documents\Public_projects\Mods\Minecraft\RSSMod\RSStats\build\sources\java\ru\rarescrap\rsstats\RSStats.java:20: error: unmappable character for encoding Cp1251
    public static final String MODNAME = "RSStats"; // –?–º—è –º–æ–¥–∞
                                                        ^
Note: C:\Users\rares\Documents\Public_projects\Mods\Minecraft\RSSMod\RSStats\build\sources\java\ru\rarescrap\rsstats\items\StatItem.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 warning

:processResources UP-TO-DATE
:classes
:jar
:compileTestJava UP-TO-DATE
:processTestResources UP-TO-DATE
:testClasses UP-TO-DATE
:test UP-TO-DATE
:extractMcpData UP-TO-DATE
:getVersionJson
:extractUserDev UP-TO-DATE
:genSrgs SKIPPED
:reobf
:assemble
:check UP-TO-DATE
:build

BUILD SUCCESSFUL

Total time: 6.53 secs
